--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,12 @@
 @tailwind base;
 @tailwind components;
 
+body {
+  font-family: sans-serif;
+}
+
 .background {
-  background-image: url("../img/bg.jpg");
+  background-image: url("../img/compressed-bg.jpg");
 }
 
 .glass {
