--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,9 @@
 body {
   font-family: sans-serif;
 }
-
+html {
+  scroll-behavior: smooth;
+}
 .background {
   background-image: url("../img/compressed-bg.jpg");
 }
