--- a/css/output.css
+++ b/css/output.css
@@ -416,6 +416,18 @@ Ensure the default browser behavior of the `hidden` attribute.
   display: none;
 }
 
+body {
+  font-family: sans-serif;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+.background {
+  background-image: url("../img/compressed-bg.jpg");
+}
+
 .glass {
   backdrop-filter: blur(10px) saturate(183%);
   -webkit-backdrop-filter: blur(10px) saturate(183%);
@@ -594,18 +606,6 @@ body {
   --tw-backdrop-sepia:  ;
 }
 
-body {
-  font-family: sans-serif;
-}
-
-html {
-  scroll-behavior: smooth;
-}
-
-.background {
-  background-image: url("../img/compressed-bg.jpg");
-}
-
 .relative {
   position: relative;
 }
@@ -623,12 +623,12 @@ html {
   margin-bottom: 1rem;
 }
 
-.mb-3 {
-  margin-bottom: 0.75rem;
-}
-
 .mt-1 {
   margin-top: 0.25rem;
+}
+
+.mb-3 {
+  margin-bottom: 0.75rem;
 }
 
 .inline-block {
@@ -637,6 +637,10 @@ html {
 
 .flex {
   display: flex;
+}
+
+.hidden {
+  display: none;
 }
 
 .h-max {
@@ -813,10 +817,6 @@ html {
     display: flex;
   }
 
-  .sm\:w-full {
-    width: 100%;
-  }
-
   .sm\:w-min {
     width: -webkit-min-content;
     width: -moz-min-content;
@@ -835,10 +835,6 @@ html {
     gap: 0.75rem;
   }
 
-  .sm\:gap-4 {
-    gap: 1rem;
-  }
-
   .sm\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
@@ -853,10 +849,6 @@ html {
 @media (min-width: 768px) {
   .md\:mb-4 {
     margin-bottom: 1rem;
-  }
-
-  .md\:flex {
-    display: flex;
   }
 
   .md\:h-max {
@@ -881,22 +873,18 @@ html {
     width: 91.666667%;
   }
 
+  .md\:w-28 {
+    width: 7rem;
+  }
+
   .md\:w-min {
     width: -webkit-min-content;
     width: -moz-min-content;
     width: min-content;
   }
 
-  .md\:w-28 {
-    width: 7rem;
-  }
-
   .md\:w-full {
     width: 100%;
-  }
-
-  .md\:flex-col {
-    flex-direction: column;
   }
 
   .md\:items-center {
